// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CommandService addNewDeployable should successfully add new deployable when no existing records 1`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "status": "available",
      "version": "1.0.0",
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "status": "available",
      "version": "1.0.0",
    },
  ],
]
`;

exports[`CommandService markDeployed should successfully mark deployed to non-prod environment 1`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "env": "staging",
      "version": "1.0.0",
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "env": "staging",
      "version": "1.0.0",
    },
  ],
]
`;

exports[`CommandService markDeployed should successfully mark deployed to non-prod environment 2`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
      "status": "pending",
      "version": "1.0.0",
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
      "status": "pending",
      "version": "1.0.0",
    },
  ],
]
`;

exports[`CommandService markDeployed should successfully mark deployed to prod environment 1`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "env": "prod",
      "version": "1.0.0",
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "env": "prod",
      "version": "1.0.0",
    },
  ],
]
`;

exports[`CommandService markDeployed should successfully mark deployed to prod environment 2`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
      "status": "prod",
      "version": "1.0.0",
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
      "status": "prod",
      "version": "1.0.0",
    },
  ],
]
`;

exports[`CommandService markDeployed should successfully mark deployed to prod environment 3`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
    },
  ],
]
`;

exports[`CommandService markDeployed should successfully mark deployed to prod environment 4`] = `
[
  [
    {
      "actor": "test-user",
      "deployable": "app1",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
    },
  ],
  [
    {
      "actor": "test-user",
      "deployable": "app2",
      "deployableTable": "deployableTable",
      "records": [
        {
          "deployable": "app1",
          "id": "1.0.0|app1",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
        {
          "deployable": "app2",
          "id": "1.0.0|app2",
          "modifiedBy": "test",
          "modifiedDate": "2024-01-01T11:22:27.000Z",
          "status": "available",
          "version": "1.0.0",
        },
      ],
    },
  ],
]
`;
